--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: kalman_filter
 description: General purpose kalman filter implementation for dart.
-# version: 1.0.0
-# homepage: https://www.example.com
+version: 0.0.1
+repository: https://github.com/elias8/kalman_filter
+homepage: https://github.com/elias8/kalman_filter
 
 environment:
   sdk: '>=2.10.0 <3.0.0'
